{
    "name": "Input",
    "maps": [
        {
            "name": "Move",
            "id": "ab36ddb2-8c95-4292-a42d-785ef7b2f719",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8a033919-c839-4f37-9121-a7205030db0d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Axis",
                    "id": "e660f660-0e08-4f9d-bea5-7f0df412b716",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c05bfedf-8dee-4d71-a222-787c7cb9096e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6b9bacf7-3847-47ad-9682-b8643c745737",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7aff7dcc-b733-46f3-a3ad-939ef8d61cdc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cbc0436c-6c74-49da-a055-88c423690840",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis",
                    "id": "143cfa77-173d-49ba-b0ec-ed9150e8dda8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "74376411-4050-4bf6-84f6-30c70b0d014f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c671fd10-2daf-44ed-84bb-2982786c9d94",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "936ed6ef-3d10-4506-ac47-a13c617b1788",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "65ae9ba5-7a25-43b8-9d81-dd54cbf746eb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Scaling",
            "id": "d1f6fbce-f0b8-48c2-89c9-4edf5ee5f70a",
            "actions": [
                {
                    "name": "Scroll Zoom",
                    "type": "Value",
                    "id": "2c725124-01d8-4ee8-839b-b499e511ca49",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "436e9251-0174-4c1c-8232-f1327f0315e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Decrease",
                    "type": "Button",
                    "id": "029b5387-ce4e-4389-a300-69b6669fafe8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Vector",
                    "id": "214b1c6a-a72e-467d-8c83-68282aaa883b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "efbdc6c9-71b2-491f-87b4-a80984f5ee8d",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Scroll Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6e4d4947-fda4-48c0-86c4-5f80ab5d0ad5",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Scroll Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard One Modifier",
                    "id": "c9d8e4f4-5553-4fad-ba60-8c5e09401c9e",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "594c5547-d065-43c4-b499-ab223fe922d5",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "36f41392-fe52-4a5f-899b-d8c1e9f96d24",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard One Modifier",
                    "id": "695759e7-0afb-4eca-8fa0-ec246eaf544b",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decrease",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "9faac2f9-abdc-4e5b-9faf-541fd0bec134",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Decrease",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "1aae3741-e8fc-4ab5-9349-3ee0d9b472b7",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Decrease",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera Rotation",
            "id": "5cfc2556-a475-430e-acb8-5c2edcc88494",
            "actions": [
                {
                    "name": "Rotation2D",
                    "type": "PassThrough",
                    "id": "b79719b3-2f42-46ba-87b8-db6cb5b422dc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reset2DRotation",
                    "type": "Button",
                    "id": "dde395af-c071-4a9f-ae2d-a54653212e52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetYAxisRotation",
                    "type": "Button",
                    "id": "a0a3db9b-5f85-4c89-8faf-cff37ac51671",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetXAxisRotation",
                    "type": "Button",
                    "id": "b56c0675-70ec-4083-a9b9-92b98eae00c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Disabled",
                    "type": "Button",
                    "id": "7c9fe2c8-254c-4391-ad85-57f3ea94a200",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "d868d4d3-400e-4a23-ada9-2aa135ef000c",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation2D",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "16883fc8-4153-4532-bfc6-309d8fad5dcc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Rotation2D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "a79ac42b-2480-427b-b103-7c247e264942",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=0.2,y=0.2)",
                    "groups": "Mouse & Keyboard",
                    "action": "Rotation2D",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "29ef0b79-c7f0-4ec2-9be8-fe9e660c4805",
                    "path": "<Keyboard>/home",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Reset2DRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "f99dd4c9-0733-41f4-9be6-b699a5c87b53",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetYAxisRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "7654a91d-e95e-4dd2-8ac9-234ea862e9ec",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "ResetYAxisRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "bdc754d1-9689-4776-83b2-125e00337ddd",
                    "path": "<Keyboard>/home",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "ResetYAxisRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "ba8ad71e-0a9e-4f87-b93c-1d7f015ea345",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetXAxisRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "b87becc1-b5ce-4dac-8a3e-3702351ab777",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "ResetXAxisRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "7d05a3cf-c1b3-46c6-b0af-071f9930803f",
                    "path": "<Keyboard>/home",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "ResetXAxisRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis",
                    "id": "4721d415-cd2b-4a20-a477-a294c60fca41",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Disabled",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6f2773ea-681a-40c0-b4b8-5f0e49884607",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Disabled",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0d603162-9fb9-4497-9447-89acdcfa0e2d",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Disabled",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b4609eca-85eb-4924-8a06-4739df63bc6c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Disabled",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "46b2921f-297a-4ec9-8010-7067ca668972",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Disabled",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Other",
            "id": "b0452ccd-c1cc-42ce-865e-b25f074b912c",
            "actions": [
                {
                    "name": "Camera Inspection Mode",
                    "type": "Button",
                    "id": "9ad96ddf-7744-479d-aa39-3ad926367616",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55157322-2ce3-4a48-ac22-9d8ecea09325",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Camera Inspection Mode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interact",
            "id": "66f1c3c2-b6d1-4b23-b1cc-a50dbb12c8fa",
            "actions": [
                {
                    "name": "PositionClick",
                    "type": "Value",
                    "id": "709838a1-c2f9-4a76-9a9c-fd1125ba9f05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Click",
                    "id": "96f2e537-d824-4874-bdd7-74da2c8e3724",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PositionClick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "df0039aa-cd75-46a9-b601-0889de557f09",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "PositionClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "67b4cc1e-041c-46cb-a9bb-0c368b821877",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "PositionClick",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "83e1908c-be1c-49b1-92b4-2cd3281fc12a",
            "actions": [
                {
                    "name": "Switch Tips",
                    "type": "Button",
                    "id": "ce373545-2f53-4660-9a50-3a068100816a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc7dc451-bcad-4880-98d1-1c69533f84e7",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse & Keyboard",
                    "action": "Switch Tips",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse & Keyboard",
            "bindingGroup": "Mouse & Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}